--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
+  "name": "hairday",
+  "description": "Aplicação Web de Reservas de Horários para Salão de cabeleireiros",
+  "author": "Emmanuel Oliveira | OFS OliveiraFullStack",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "webpack serve",
+    "server": "json-server --watch  ./src/server.json --port 3333",
+    "build": "webpack"
+  },
   "dependencies": {
+    "copy-webpack-plugin": "11.0.0",
+    "dayjs": "1.11.10",
     "json-server": "1.0.0alpha.21"
   },
-  "scripts": {
-    "server": "json-server --watch  ./src/server.json --port 3333 "
+  "devDependencies": {
+    "@babel/core": "7.23.7",
+    "@babel/preset-env": "7.23.7",
+    "babel-loader": "9.1.3",
+    "css-loader": "6.8.1",
+    "html-webpack-plugin": "5.6.0",
+    "style-loader": "3.3.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "4.15.1"
   }
 }
